--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
     <section id="contact" data-aos="fade-up">
       <h2>Contact Me</h2>
-      <form action="https://formsubmit.co/sarathselvam17105@gmail.com" method="POST">
+      <form action="https://formsubmit.co/sarathkumar.s.2022.mech@ritchennai.edu.in" method="POST">
         <input type="hidden" name="_captcha" value="false">
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="email" placeholder="Your Email" required>
